# PlayVault

./: .gitignore  CMakeLists.txt  README.md
resources/: style.css
src/: main.cpp
src/App/: PlayVaultApp.cpp  PlayVaultApp.hpp
src/FTP/: FtpClient.cpp  FtpClient.hpp
src/GUI/: MainWindow.cpp  MainWindow.hpp
src/Logger/: Logger.cpp  Logger.hpp
